// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#505256",
      "borderRadius": 8,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 0,
      "marginVertical": 0,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    flex={1}
  >
    <View
      style={
        Object {
          "borderBottomColor": "#ffffff",
          "borderBottomWidth": 1,
          "overflow": "hidden",
          "padding": 12,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 48,
            },
          ]
        }
      >
        12
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 14,
            },
          ]
        }
      >
        New Comments
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/comments.png",
          }
        }
        style={
          Object {
            "height": 48,
            "opacity": 0.35,
            "position": "absolute",
            "right": -15,
            "top": 32,
            "width": 48,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 12,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "flex": 1,
              "fontSize": 12,
              "fontWeight": "bold",
            },
          ]
        }
      >
        VIEW
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 12,
              },
              Object {},
            ],
            Object {
              "fontFamily": "icomoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="IconButton"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 13,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {},
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly singular 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#505256",
      "borderRadius": 8,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 0,
      "marginVertical": 0,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    flex={1}
  >
    <View
      style={
        Object {
          "borderBottomColor": "#ffffff",
          "borderBottomWidth": 1,
          "overflow": "hidden",
          "padding": 12,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 48,
            },
          ]
        }
      >
        1
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 14,
            },
          ]
        }
      >
        New Comment
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/comments.png",
          }
        }
        style={
          Object {
            "height": 48,
            "opacity": 0.35,
            "position": "absolute",
            "right": -15,
            "top": 32,
            "width": 48,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 12,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "flex": 1,
              "fontSize": 12,
              "fontWeight": "bold",
            },
          ]
        }
      >
        VIEW
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 12,
              },
              Object {},
            ],
            Object {
              "fontFamily": "icomoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="IconButton"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 13,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {},
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
